Give better message instead of error if user asks for a final_action only run and there aren't any.

--- a/lib/port_upgrade/port_upgrade_sh.erb
+++ b/lib/port_upgrade/port_upgrade_sh.erb
@@ -29,8 +29,12 @@ case $1 in
     install_ports
     ;;
   final)
+	<%if final_actions.size > 0 %>
     echo "final actions"
   	final_actions
+  <% else %>
+    echo "No final actions"
+  <% end %>
     ;;
   '')
     echo "full run"
